# MCPFolderOrganizer

./: .gitignore  README.md  main.py  mcp.example.json  pyproject.toml  requirements.txt  settings.py
models/: __init__.py  file_models.py  result.py
services/: __init__.py  file_analysis_service.py  file_organization_service.py
tests/: test_file_analysis_service.py  test_file_organization_service.py
utils/: __init__.py  errors.py  interactive.py  paths.py  validate.py
