[project]
name = "file-organizer-mcp"
version = "0.1.0"
description = "MCP server for analyzing and organizing files into topic-based folders with intelligent naming"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[project.urls]
Homepage = "https://github.com/yourusername/file-organizer-mcp"
Repository = "https://github.com/yourusername/file-organizer-mcp"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["models", "services", "utils", "tests"]
